# ocluster

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGES.md  Dockerfile  Dockerfile.worker  Dockerfile.worker.alpine  LICENSE  Makefile  README.md  build-scheduler-api.opam  build-scheduler.opam  current_ocluster.opam  current_ocluster.opam.template  dune  dune-project  index.html  ocluster-api.opam  ocluster-worker.opam  ocluster-worker.opam.template  ocluster.opam  ocluster.opam.template  shell.nix  stack.yml
.github/workflows/: extract.sh  main.yml
api/: admin.ml  client.ml  client.mli  cluster.capnp  custom.ml  custom.mli  docker.ml  docker.mli  dune  job.ml  nix_build.ml  obuilder_job.ml  pool_admin.ml  progress.ml  queue.ml  raw.ml  registration.ml  schema.capnp  server.ml  submission.ml  ticket.ml  worker.ml
current_ocluster/: index.html
current_ocluster/Current_ocluster/: index.html
current_ocluster/Current_ocluster/Connection/: index.html
current_ocluster/Current_ocluster/Raw/: index.html
db/: db.ml  dune
examples/: docker_pipeline.ml  docker_pipeline.mli  dune  logging.ml  obuilder_pipeline.ml  obuilder_pipeline.mli  solve.ml
lib/: agents.ml  dune  server.ml
lwt_retry/: dune  lwt_retry.ml  lwt_retry.mli
nix/: default.nix  opam-selection.nix  wrangle.json
ocluster/: index.html
ocluster-api/: index.html
ocluster-api/Cluster_api/: index.html
ocluster-api/Cluster_api/Admin/: index.html
ocluster-api/Cluster_api/Custom/: index.html
ocluster-api/Cluster_api/Docker/: index.html
ocluster-api/Cluster_api/Docker/Image_id/: index.html
ocluster-api/Cluster_api/Docker/Spec/: index.html
ocluster-api/Cluster_api/Job/: index.html
ocluster-api/Cluster_api/Obuilder_job/: index.html
ocluster-api/Cluster_api/Obuilder_job/Spec/: index.html
ocluster-api/Cluster_api/Pool_admin/: index.html
ocluster-api/Cluster_api/Progress/: index.html
ocluster-api/Cluster_api/Queue/: index.html
ocluster-api/Cluster_api/Raw/: index.html
ocluster-api/Cluster_api/Raw/Builder/: index.html
ocluster-api/Cluster_api/Raw/Builder/AdditionalMetric/: index.html
ocluster-api/Cluster_api/Raw/Builder/Admin/: index.html
ocluster-api/Cluster_api/Raw/Builder/Custom/: index.html
ocluster-api/Cluster_api/Raw/Builder/DockerBuild/: index.html
ocluster-api/Cluster_api/Raw/Builder/Job/: index.html
ocluster-api/Cluster_api/Raw/Builder/JobDescr/: index.html
ocluster-api/Cluster_api/Raw/Builder/Metric/: index.html
ocluster-api/Cluster_api/Raw/Builder/OBuilder/: index.html
ocluster-api/Cluster_api/Raw/Builder/PoolAdmin/: index.html
ocluster-api/Cluster_api/Raw/Builder/Progress/: index.html
ocluster-api/Cluster_api/Raw/Builder/Queue/: index.html
ocluster-api/Cluster_api/Raw/Builder/Registration/: index.html
ocluster-api/Cluster_api/Raw/Builder/Secret/: index.html
ocluster-api/Cluster_api/Raw/Builder/Submission/: index.html
ocluster-api/Cluster_api/Raw/Builder/Ticket/: index.html
ocluster-api/Cluster_api/Raw/Builder/Worker/: index.html
ocluster-api/Cluster_api/Raw/Client/: index.html
ocluster-api/Cluster_api/Raw/MessageWrapper/: index.html
ocluster-api/Cluster_api/Raw/MetricsSource_15417368036688066650/: index.html
ocluster-api/Cluster_api/Raw/Reader/: index.html
ocluster-api/Cluster_api/Raw/Service/: index.html
ocluster-api/Cluster_api/Registration/: index.html
ocluster-api/Cluster_api/Schema/: index.html
ocluster-api/Cluster_api/Schema/Make/: index.html
ocluster-api/Cluster_api/Schema/MakeRPC/: index.html
ocluster-api/Cluster_api/Schema/module-type-S/: index.html
ocluster-api/Cluster_api/Submission/: index.html
ocluster-api/Cluster_api/Ticket/: index.html
ocluster-api/Cluster_api/Worker/: index.html
ocluster-worker/: index.html
ocluster-worker/Cluster_worker/: index.html
ocluster-worker/Cluster_worker/Log_data/: index.html
ocluster-worker/Cluster_worker/Obuilder_config/: index.html
ocluster-worker/Cluster_worker/Process/: index.html
ocluster/Cluster_scheduler/: index.html
ocluster/Cluster_scheduler/Item/: index.html
ocluster/Cluster_scheduler/Metrics/: index.html
ocluster/Cluster_scheduler/Pool/: index.html
ocluster/Cluster_scheduler/Pool/Dao/: index.html
ocluster/Cluster_scheduler/Pool/Inactive_reasons/: index.html
ocluster/Cluster_scheduler/Pool/Make/: index.html
ocluster/Cluster_scheduler/Pool_api/: index.html
ocluster/Cluster_scheduler/Pool_api/Pool/: index.html
ocluster/Cluster_scheduler/S/: index.html
ocluster/Cluster_scheduler/S/module-type-ITEM/: index.html
ocluster/Cluster_scheduler/S/module-type-TIME/: index.html
ocluster/Cluster_scheduler/Sqlite_loader/: index.html
ocluster/Cluster_scheduler/Sqlite_loader/Ty/: index.html
ocluster/Db/: index.html
ocluster/Ocluster_expect_tests/: index.html
ocluster/Ocluster_expect_tests/Test_scheduling/: index.html
ocluster/Ocluster_expect_tests/Test_scheduling/Fake_time/: index.html
ocluster/Ocluster_expect_tests/Test_scheduling/Item/: index.html
ocluster/Ocluster_expect_tests/Test_scheduling/Pool/: index.html
ocurrent-plugin/: artifacts.ml  artifacts.mli  connection.ml  connection.mli  current_ocluster.ml  current_ocluster.mli  dune  kmp.ml  kmp.mli  log.ml
scheduler/: build_scheduler.ml  cluster_scheduler.ml  dune  log.ml  pool.ml  pool.mli  s.ml  sqlite_loader.ml  sqlite_loader.mli
stress/: Dockerfile  ci.ml  docker-compose.yml  dune  health_check.ml  stress.ml  utils.ml  worker.ml
stress/grafana/: Dockerfile  grafana.ini
stress/grafana/dashboards/: ocluster.json
stress/prometheus/: prometheus.yml
test/: custom.ml  custom_spec.ml  dune  mock_builder.ml  mock_network.ml  test.ml  test_lwt_retry.ml  test_plugin.ml  test_scheduling.ml
worker/: GetDiskFreeSpaceExW.c  build_worker.ml  build_worker.mli  cluster_worker.ml  cluster_worker.mli  context.ml  context.mli  df.ml  dune  fetcher.docker.ml  fetcher.freebsd.ml  fetcher.macos.ml  fetcher.mli  fetcher.zfs_clone.ml  log.ml  log_data.ml  metrics.ml  nix_build.ml  obuilder_build.ml  obuilder_build.mli  process.ml  process.mli
(+1048 files in other folders)
