(test
  (name test)
  (package ocluster)
  (modules test custom mock_builder mock_network test_plugin test_lwt_retry)
  (libraries
    alcotest-lwt
    capnp-rpc-net
    capnp-rpc-unix
    cluster_scheduler
    cluster_worker
    current_ocluster
    lwt_retry
    db
    fmt.tty
    logs.fmt
    lwt.unix
    prometheus-app))

(library
  (name ocluster_expect_tests)
  (package ocluster)
  (modules test_scheduling)
  (inline_tests)
  (preprocess (pps ppx_expect))
  (libraries
    cluster_scheduler
    db
    fmt.tty
    logs.fmt
    lwt.unix
    prometheus-app))
