(rule
 (deps fetcher.macos.ml)
 (target fetcher.ml)
 (enabled_if (= %{system} macosx))
 (action (copy %{deps} %{target})))

(rule
 (deps fetcher.freebsd.ml)
 (target fetcher.ml)
 (enabled_if (= %{system} freebsd))
 (action (copy %{deps} %{target})))

(rule
 (deps fetcher.docker.ml)
 (target fetcher.ml)
 (enabled_if (and (<> %{system} macosx) (<> %{system} freebsd)))
 (action (copy %{deps} %{target})))

(library
 (name cluster_worker)
 (public_name ocluster-worker)
 (libraries ocluster-api digestif fpath logs capnp-rpc-lwt lwt.unix prometheus-app cohttp-lwt-unix obuilder extunix))
