(rule
 (deps fetcher.zfs_clone.ml)
 (target fetcher.ml)
 (enabled_if (or (= %{system} macosx) (= %{system} freebsd)))
 (action (copy %{deps} %{target})))

(rule
 (deps fetcher.docker.ml)
 (target fetcher.ml)
 (enabled_if (and (<> %{system} macosx) (<> %{system} freebsd)))
 (action (copy %{deps} %{target})))

(library
 (name cluster_worker)
 (public_name ocluster-worker)
 (libraries
   capnp-rpc-lwt
   cohttp-lwt-unix
   digestif
   fpath
   logs
   lwt.unix
   ocluster-api
   prometheus-app
   obuilder
   extunix
   str))
